chore: fixed pagination spacing

--- a/src/features/components/templates/trade-platform/other-platforms/styles.module.scss
+++ b/src/features/components/templates/trade-platform/other-platforms/styles.module.scss
@@ -17,10 +17,10 @@
     }
 }
 .swiper_wrapper {
-    margin-inline: -1rem !important;
-    padding-block-end: 3rem !important;
+    padding-block-end: 3.5rem !important;
+    margin-block-end: -3.5rem !important;
     padding-inline: 1rem !important;
-    margin-block-end: -3rem !important;
+    margin-inline: -1rem !important;
 }
 .swiper_slide {
     align-self: stretch;
